Attempted fix of the responsivity and overlap

--- a/www/style/nav.css
+++ b/www/style/nav.css
@@ -64,14 +64,15 @@ nav{
 	}
 	.nav-links{
 		position: absolute;
+		margin-top: 5%;
 		right: 0px;
-		height: 92.96vh;
-		top: 7.94vh;
+		height: 100vh;
+		top: 0vh;
 		background-color: black;
 		display: none;
 		flex-direction: column;
         align-items: center;
-		width: 50vw;
+		width: 70vw;
 		transform: translateX(100%);
 		transition: transform 0.1s ease-in;
 	}
